# OpenCV_CardIdentifier

./: CMakeLists.txt  CMakeSettings.json  README.md
CardIdentifier/: CMakeLists.txt  CardIdentifier.h  main.cpp
